@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2012-07-XX  Release 7.22.2                                     ---
 ----------------------------------------------------------------------
 
+* fixed crash when running screengrab in archer - Nick Reed
 * fixed asc2g and mged empty revolve object crashes - Sean Morrison
 * fixed crash when parsing invalid shader parameters - Cliff Yapp
 * fixed mged 'dbupgrade' -permissions error on windows - Sean Morrison
